--- a/Mercadeo/assets/css/main.css
+++ b/Mercadeo/assets/css/main.css
@@ -1,9 +1,33 @@
-.container{
-    background: #232526;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+.container {
+  background: #2bc0e4; /* fallback for old browsers */ /*fondo solido*/
+  background: -webkit-linear-gradient( /*estos son los degradados*/
+    to right,
+    #eaecc6,
+    #2bc0e4
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #eaecc6,
+    #2bc0e4
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-td{
-    border: solid 1px;
+html{
+    font-family: 'Open Sans', sans-serif;
+font-family: 'Caveat Brush', cursive;
+}
+.content {
+    margin: 0px;
+    max-width: 960px;
+    max-height: 500px;
+    width: 100%;
+    height: 100%;
+    /* background-color:#e8ffff; */
+}
+
+td {
+  border: solid 1px;
 }
