--- a/Mercadeo/assets/css/main.css
+++ b/Mercadeo/assets/css/main.css
@@ -1,7 +1,7 @@
 .container {
   background: #2bc0e4; /* fallback for old browsers */ /*fondo solido*/
-  background: -webkit-linear-gradient( /*estos son los degradados*/
-    to right,
+  background: -webkit-linear-gradient(
+    /*estos son los degradados*/ to right,
     #eaecc6,
     #2bc0e4
   ); /* Chrome 10-25, Safari 5.1-6 */
@@ -15,17 +15,20 @@
   align-items: center;
   justify-content: center;
 }
-html{
+html {
     font-family: 'Open Sans', sans-serif;
-font-family: 'Caveat Brush', cursive;
+    font-family: 'Caveat Brush', cursive;
+    font-family: 'Sacramento', cursive;
+    font-family: 'Arbutus Slab', serif;
+    
 }
 .content {
-    margin: 0px;
-    max-width: 960px;
-    max-height: 500px;
-    width: 100%;
-    height: 100%;
-    /* background-color:#e8ffff; */
+  margin: 0px;
+  max-width: 960px;
+  max-height: 500px;
+  width: 100%;
+  height: 100%;
+  /* background-color:#e8ffff; */
 }
 
 td {
