--- a/Mercadeo/assets/css/main.css
+++ b/Mercadeo/assets/css/main.css
@@ -1,3 +1,7 @@
+body{
+  height: 100vh;
+}
+
 .container {
   background: #2bc0e4; /* fallback for old browsers */ /*fondo solido*/
   background: -webkit-linear-gradient(
@@ -14,6 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 1em;
 }
 html {
     font-family: 'Open Sans', sans-serif;
@@ -47,8 +52,35 @@ a{
   max-height: 500px;
   width: 100%;
   height: 100%;
+  /* box-shadow: difhorizontal, difvertical, desemfoque, amplitud, color sombra; */
+  box-shadow: -3px 2px 6px #606263;
   /* background-color:#e8ffff; */
+  border-radius: 1em;
+  position: relative;
+  /*  elemento posicionadp */
 }
+
+.actions{
+  position: absolute;
+  top: 1em;
+  right: 1em;
+}
+
+.close{
+  height: 35px;
+  width: 35px;
+  color: white;
+  border-radius: 70%;
+  background-color: blueviolet;
+  display: inline-block;
+  box-shadow: 0 3px 6px #606263;
+  font-weight: 300;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .table{
     width: 100%;
     border-spacing: 0;
@@ -63,6 +95,18 @@ a{
 /* nthchik es una seudo clase */
 .tittle-item{
   /* ´para definir el borde  */
-  border-bottom-style: solid;
-  border-width: 2.5px;
+  border-bottom: solid 2px rgb(231, 112, 33);
+  /* border-width: 2.5px; */
+  padding-bottom: 1em;
+}
+h1{
+  border-bottom-style: outset;
+}
+
+.position{
+  background-color:rgb(231, 112, 33) ;
+  color: white;
+  padding: 12px;
+  margin: 0.5%;
+  border-radius: 1rem;
 }
