--- a/Mercadeo/assets/css/main.css
+++ b/Mercadeo/assets/css/main.css
@@ -18,7 +18,6 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 1em;
 }
 html {
     font-family: 'Open Sans', sans-serif;
@@ -30,6 +29,18 @@ html {
 a{
     text-decoration: none;
     color: #684c00;
+}
+
+a:hover{
+  opacity: 0.9;
+}
+
+a:focus{
+  background-color: lightcoral;
+}
+
+a:active {
+  background: #0000FF;
 }
 .tittle{
     text-transform: uppercase;
@@ -48,8 +59,8 @@ a{
 }
 .content {
   margin: 0px;
-  max-width: 960px;
-  max-height: 500px;
+  max-width: 1000px;
+  max-height: 550px;
   width: 100%;
   height: 100%;
   /* box-shadow: difhorizontal, difvertical, desemfoque, amplitud, color sombra; */
@@ -58,6 +69,8 @@ a{
   border-radius: 1em;
   position: relative;
   /*  elemento posicionadp */
+  padding: 2em;
+  margin: 2em;
 }
 
 .actions{
@@ -109,4 +122,9 @@ h1{
   padding: 12px;
   margin: 0.5%;
   border-radius: 1rem;
+  margin-right: 0.5em;
+}
+
+.icon{
+  font-weight: bold;
 }
