--- a/Mercadeo/assets/css/main.css
+++ b/Mercadeo/assets/css/main.css
@@ -81,9 +81,9 @@ a:active {
 
 
 .main-image{
-  margin-bottom: 3px;
   float: left;
-  height: 10px;
+  margin-right: 1em;
+  height: 250px;
 
 }
 
