--- a/Mercadeo/assets/css/main.css
+++ b/Mercadeo/assets/css/main.css
@@ -46,6 +46,7 @@ a:active {
     text-transform: uppercase;
     text-align: center;
     border-color: lightslategrey;
+    border-bottom-style: solid;
 }
 
 .paragraph{
@@ -65,12 +66,14 @@ a:active {
   height: 100%;
   /* box-shadow: difhorizontal, difvertical, desemfoque, amplitud, color sombra; */
   box-shadow: -3px 2px 6px #606263;
-  /* background-color:#e8ffff; */
-  border-radius: 1em;
+  background-color:#81eeee;
+  /* border-radius: 1em; */
   position: relative;
   /*  elemento posicionadp */
   padding: 2em;
-  margin: 2em;
+  /* margin: 2em; */
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .actions{
@@ -125,7 +128,7 @@ a:active {
 .position{
   background-color:rgb(231, 112, 33) ;
   color: white;
-  padding: 12px;
+  padding: 0.5em;
   margin: 0.5%;
   border-radius: 1rem;
   margin-right: 0.5em;
@@ -135,4 +138,6 @@ a:active {
   font-weight: 800;
   color:#642B73;
   font-size: 1.4em;
+  margin-top: 1em;
+  display: inline-block;
 }
