--- a/Mercadeo/assets/css/main.css
+++ b/Mercadeo/assets/css/main.css
@@ -61,9 +61,8 @@ a:active {
 .content {
   margin: 0px;
   max-width: 1000px;
-  max-height: 550px;
   width: 100%;
-  height: 100%;
+  height: 80vh;
   /* box-shadow: difhorizontal, difvertical, desemfoque, amplitud, color sombra; */
   box-shadow: -3px 2px 6px #606263;
   background-color:#81eeee;
@@ -80,7 +79,6 @@ a:active {
   top: 1em;
   right: 1em;
 }
-
 
 .main-image{
   float: left;
@@ -139,4 +137,18 @@ a:active {
   font-size: 1.4em;
   margin-top: 1em;
   display: inline-block;
+}
+
+/* @media print {sirve para cuando la pagina va hacer impresa} */
+
+@media (min-height:550px){
+  .content{
+    height: 500px;
+  }
+}
+
+@media(max-width:600px){
+  .content{
+    padding: 1em;
+  }
 }
